@@ -2,14 +2,14 @@ package org._java_proj.gym_management_system.features.message.service.impl;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org._java_proj.gym_management_system.config.response.dto.PaginatedApiResponse;
+import org._java_proj.gym_management_system.config.response.dto.PaginationMeta;
 import org._java_proj.gym_management_system.features.message.dto.request.ChatMessageRequest;
 import org._java_proj.gym_management_system.features.message.dto.response.ChatMessageResponse;
 import org._java_proj.gym_management_system.features.message.dto.response.ChatRoomResponse;
 import org._java_proj.gym_management_system.features.message.dto.response.WebSocketMessage;
 import org._java_proj.gym_management_system.features.message.repository.ChatMessageRepository;
 import org._java_proj.gym_management_system.features.message.repository.ChatRoomRepository;
-import org._java_proj.gym_management_system.features.message.repository.ClassGroupRepository;
-import org._java_proj.gym_management_system.features.message.repository.GroupMemberRepository;
 import org._java_proj.gym_management_system.features.message.service.ChatService;
 import org._java_proj.gym_management_system.features.message.service.OnlineUserService;
 import org._java_proj.gym_management_system.features.users.repository.UserRepository;
@@ -19,6 +19,7 @@ import org._java_proj.gym_management_system.model.User;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.http.HttpStatus;
 import org.springframework.messaging.simp.SimpMessageSendingOperations;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -35,18 +36,16 @@ public class ChatServiceImpl implements ChatService {
     private final ChatMessageRepository chatMessageRepository;
     private final ChatRoomRepository chatRoomRepository;
     private final UserRepository userRepository;
-    private final ClassGroupRepository classGroupRepository;
-    private final GroupMemberRepository groupMemberRepository;
     private final SimpMessageSendingOperations messagingTemplate;
     private final OnlineUserService onlineUserService;
 
     @Transactional
     public ChatMessageResponse sendPrivateMessage(Long senderId, ChatMessageRequest request) {
-        // Validate recipient exists and allows messages
+        User sender = userRepository.findById(senderId)
+                .orElseThrow(() -> new IllegalArgumentException("Sender not found: " + senderId));
         User recipient = userRepository.findById(request.getRecipientId())
-                .orElseThrow(() -> new RuntimeException("Recipient not found"));
+                .orElseThrow(() -> new IllegalArgumentException("Recipient not found: " + request.getRecipientId()));
 
-        // Create and save message
         ChatMessage message = ChatMessage.builder()
                 .senderId(senderId)
                 .recipientId(request.getRecipientId())
@@ -57,15 +56,19 @@ public class ChatServiceImpl implements ChatService {
 
         ChatMessage savedMessage = chatMessageRepository.save(message);
 
-        // Create or update chat room
         createOrUpdateChatRoom(senderId, request.getRecipientId(), savedMessage.getId());
 
-        // Convert to response
         ChatMessageResponse response = convertToMessageResponse(savedMessage);
 
-        // Send real-time message to recipient
         messagingTemplate.convertAndSendToUser(
-                recipient.getEmail(),
+                String.valueOf(recipient.getId()),
+                "/queue/messages",
+                WebSocketMessage.of("NEW_MESSAGE", response)
+        );
+
+        // Notify sender
+        messagingTemplate.convertAndSendToUser(
+                sender.getEmail(),
                 "/queue/messages",
                 WebSocketMessage.of("NEW_MESSAGE", response)
         );
@@ -74,56 +77,37 @@ public class ChatServiceImpl implements ChatService {
         return response;
     }
 
-    @Transactional
-    public ChatMessageResponse sendGroupMessage(Long senderId, ChatMessageRequest request) {
-        // Validate study group exists and user is member
-        classGroupRepository.findById(request.getStudyGroupId())
-                .orElseThrow(() -> new RuntimeException("Study group not found"));
 
-        boolean isMember = groupMemberRepository.existsByUserIdAndGroupId(senderId, request.getStudyGroupId());
-        if (!isMember) {
-            throw new RuntimeException("User is not a member of this study group");
-        }
 
-        // Create and save message
-        ChatMessage message = ChatMessage.builder()
-                .senderId(senderId)
-                .studyGroupId(request.getStudyGroupId())
-                .content(request.getContent())
-                .messageType(request.getMessageType())
-                .attachmentUrl(request.getAttachmentUrl())
-                .build();
+    @Override
+    public PaginatedApiResponse<ChatMessageResponse> getPrivateChatHistory(
+            Long userId, Long otherUserId, int page, int size) {
 
-        ChatMessage savedMessage = chatMessageRepository.save(message);
-        ChatMessageResponse response = convertToMessageResponse(savedMessage);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<ChatMessage> messagesPage =
+                chatMessageRepository.findPrivateMessagesBetweenUsers(userId, otherUserId, pageable);
 
-        // Send real-time message to all group members
-        messagingTemplate.convertAndSend(
-                "/topic/group/" + request.getStudyGroupId(),
-                WebSocketMessage.of("NEW_GROUP_MESSAGE", response)
-        );
-
-        // Create notifications for all group members except sender
-        List<Long> memberIds = groupMemberRepository.findUserIdsByGroupId(request.getStudyGroupId())
+        // Convert ChatMessage → ChatMessageResponse
+        List<ChatMessageResponse> messageDtos = messagesPage.getContent()
                 .stream()
-                .filter(id -> !id.equals(senderId))
-                .toList();
+                .map(this::convertToMessageResponse)
+                .collect(Collectors.toList());
 
-        log.info("Group message sent by {} to group {}", senderId, request.getStudyGroupId());
-        return response;
+        // Build pagination metadata
+        PaginationMeta meta = new PaginationMeta();
+        meta.setTotalItems(messagesPage.getTotalElements());
+        meta.setTotalPages(messagesPage.getTotalPages());
+        meta.setCurrentPage(pageable.getPageNumber() + 1);
+
+        return PaginatedApiResponse.<ChatMessageResponse>builder()
+                .success(1)
+                .code(HttpStatus.OK.value())
+                .message("Private chat history fetched successfully.")
+                .meta(meta)
+                .data(messageDtos)
+                .build();
     }
 
-    public Page<ChatMessageResponse> getPrivateChatHistory(Long userId, Long otherUserId, int page, int size) {
-        Pageable pageable = PageRequest.of(page, size);
-        Page<ChatMessage> messages = chatMessageRepository.findPrivateMessagesBetweenUsers(userId, otherUserId, pageable);
-        return messages.map(this::convertToMessageResponse);
-    }
-
-    public Page<ChatMessageResponse> getGroupChatHistory(Long studyGroupId, int page, int size) {
-        Pageable pageable = PageRequest.of(page, size);
-        Page<ChatMessage> messages = chatMessageRepository.findGroupMessages(studyGroupId, pageable);
-        return messages.map(this::convertToMessageResponse);
-    }
 
     public List<ChatRoomResponse> getChatRooms(Long userId) {
         List<ChatRoom> chatRooms = chatRoomRepository.findByUserIdOrderByLastMessageAtDesc(userId);
@@ -133,12 +117,9 @@ public class ChatServiceImpl implements ChatService {
     }
 
     @Transactional
-    public void markMessagesAsRead(Long userId, Long senderId, Long studyGroupId) {
-        if (studyGroupId != null) {
-            chatMessageRepository.markGroupMessagesAsRead(studyGroupId, userId);
-        } else if (senderId != null) {
-            chatMessageRepository.markPrivateMessagesAsRead(userId, senderId);
-        }
+    public void markMessagesAsRead(Long userId, Long senderId) {
+        chatMessageRepository.markPrivateMessagesAsRead(userId, senderId);
+        log.info("Messages marked as read for recipient {} from sender {}", userId, senderId);
     }
 
     private void createOrUpdateChatRoom(Long user1Id, Long user2Id, Long messageId) {
@@ -151,6 +132,7 @@ public class ChatServiceImpl implements ChatService {
             chatRoomRepository.save(room);
         } else {
             ChatRoom newRoom = ChatRoom.builder()
+                    .roomIdentifier("user" + Math.min(user1Id, user2Id) + "_user" + Math.max(user1Id, user2Id))
                     .user1Id(user1Id)
                     .user2Id(user2Id)
                     .lastMessageId(messageId)
@@ -169,12 +151,11 @@ public class ChatServiceImpl implements ChatService {
                 .senderName(sender != null ? sender.getProfile().getName() : "Unknown")
                 .senderAvatarUrl(sender != null ? sender.getProfile().getProfilePic() : null)
                 .recipientId(message.getRecipientId())
-                .studyGroupId(message.getStudyGroupId())
                 .content(message.getContent())
                 .messageType(message.getMessageType())
                 .attachmentUrl(message.getAttachmentUrl())
-                .isRead(message.getIsRead())
-                .isEdited(message.getIsEdited())
+                .isRead(message.isRead())
+                .isEdited(message.isEdited())
                 .editedAt(message.getUpdatedAt())
                 .createdAt(message.getCreatedAt())
                 .build();
@@ -185,8 +166,11 @@ public class ChatServiceImpl implements ChatService {
         User otherUser = userRepository.findById(otherUserId).orElse(null);
 
         ChatMessageResponse lastMessage = null;
-        if (room.getLastMessage() != null) {
-            lastMessage = convertToMessageResponse(room.getLastMessage());
+        if (room.getLastMessageId() != null) {
+            Optional<ChatMessage> message = chatMessageRepository.findById(room.getLastMessageId());
+            if (message.isPresent()) {
+                lastMessage = convertToMessageResponse(message.get());
+            }
         }
 
         Long unreadCount = chatMessageRepository.countUnreadPrivateMessages(currentUserId);
